<resources>
    <string name="app_name">aospettri</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">메인 화면</string>
    <string name="second_fragment_label">로그인 완료</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="GnMPerformance">(주)지엔앰퍼포먼스</string>
    <string name="signup">회원가입</string>
    <string name="login">로그인</string>
    <string name="ID">ID</string>
    <string name="PASSWORD">PASSWORD</string>
    <string name="third_fragment_label">회원가입 화면</string>
    <string name="signupKOR">회원 가입</string>
    <string name="signupKORLabel1">회원 아이디</string>
    <string name="signupKORLabel2">이메일 주소</string>
    <string name="signupKORLabel3">연락처</string>
    <string name="signupKORLabel4">이름</string>
    <string name="fourth_fragment_label">회원가입 성공</string>
    <string name="signupSuccess">회원가입 성공</string>
    <string name="enroll">등록</string>
    <string name="back">뒤로가기</string>
    <string name="logout">로그아웃</string>
    <string name="home">메인화면</string>

</resources>