<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ThirdFragment">

    <TextView
        android:id="@+id/header"
        android:layout_width="147dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/signupKOR"
        app:guidelineUseRtl="false"
        app:layout_constraintBottom_toTopOf="@id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <Button
        android:id="@+id/button_enroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enroll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.693"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:id="@+id/signupLabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signupKORLabel1"
        app:layout_constraintBottom_toTopOf="@id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.274"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.165" />

    <TextView
        android:id="@+id/signupLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signupKORLabel2"
        app:layout_constraintBottom_toTopOf="@id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/signupLabel1"
        app:layout_constraintTop_toBottomOf="@id/signupLabel1"
        app:layout_constraintVertical_bias="0.288" />

    <TextView
        android:id="@+id/signupLabel3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signupKORLabel4"
        app:layout_constraintBottom_toTopOf="@id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="@id/signupLabel2"
        app:layout_constraintTop_toBottomOf="@id/signupLabel2"
        app:layout_constraintVertical_bias="0.443" />

    <EditText
        android:id="@+id/textbox_userid"
        android:layout_width="134dp"
        android:layout_height="54dp"
        android:layout_weight="1"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="gnmtest"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.252"
        app:layout_constraintStart_toEndOf="@id/signupLabel1"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.103" />

    <EditText
        android:id="@+id/textbox_email"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="abc@gnm.test"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toEndOf="@id/signupLabel2"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.446" />

    <EditText
        android:id="@+id/textbox_name"
        android:layout_width="137dp"
        android:layout_height="54dp"
        android:layout_weight="1"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="지엔앰퍼포먼스"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@id/signupLabel3"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.806" />

</androidx.constraintlayout.widget.ConstraintLayout>